# vds

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml  diesel.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cargo-deny.yaml  linux.yaml  main.yaml
docs/: leap_config_template.toml  manifest-example.json  manifest-schema.json  vds_config_template.toml
leap-api/: Cargo.toml
leap-api/src/: lib.rs  types.rs
leap-linux/: Config.in  Makefile  default.nix  external.desc  external.mk
leap-linux/board/raspberry_pi_4/: cmdline.txt  device_table.txt  users_table.txt
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/: fstab
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/NetworkManager/: NetworkManager.conf
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/NetworkManager/system-connections/: leap-hotspot.nmconnection
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/ssh/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config  trusted_user_ca_keys
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/sudoers.d/: wheel_no_passwd
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/systemd/: resolved.conf
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/systemd/network/: end0.network
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/systemd/system/: leap.service  var-lib-leap.mount
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/systemd/system/NetworkManager.service.wants/: var-lib-leap.mount
leap-linux/board/raspberry_pi_4/rootfs_overlay/etc/systemd/system/multi-user.target.wants/: leap.service
leap-linux/configs/: leap_defconfig
leap-linux/package/: Config.in
leap-linux/package/leap/: Config.in  leap.hash  leap.mk
leap-linux/patches/sudo/: 0001-setuid.patch
leap-provision-site/: Cargo.toml  default.nix  index.html  style.scss
leap-provision-site/src/: app.rs  completed.rs  leap_config.rs  lib.rs  main.rs  network_config.rs  storage_config.rs  utils.rs
leap-server/: Cargo.toml  build.rs  default.nix
leap-server/src/: api.rs  build_info.rs  cfg.rs  db.rs  lib.rs  main.rs  manifest.rs  provision.rs  static_files.rs
leap-server/src/api/: mod.rs  provision.rs  user.rs
leap-server/src/downloader/: mod.rs  s3backend.rs  tasks.rs
leap-server/src/provision/: cfg.rs  mod.rs  network.rs  storage.rs
leap-server/src/provision/network/: dbus.rs
leap-server/src/provision/network/dbus/: networkmanager.rs  networkmanager_connection_active.rs  networkmanager_device.rs  networkmanager_settings.rs  networkmanager_settings_connection.rs
leap-site/: Cargo.toml  default.nix  index.html
leap-site/src/: context.rs  main.rs
leap-site/src/pages/: dashboard.rs  mod.rs  player.rs  status.rs
vds-api/: Cargo.toml
vds-api/src/: lib.rs  types.rs
vds-server/: Cargo.toml  build.rs  config.yaml
vds-server/migrations/2026-01-03-122641_create_videos/: up.sql
vds-server/src/: build_info.rs  cfg.rs  configuration.rs  downloader.rs  lib.rs  main.rs  manifest.rs
vds-server/src/api/: management.rs  mod.rs  user.rs
vds-server/src/db/: mod.rs  models.rs  schema.rs
vds-server/src/downloader/: backend.rs  mod.rs  tasks.rs
vds-server/src/static_files/: mod.rs
vds-site/: Cargo.toml  index.html  index.scss
vds-site/src/: app.rs  context.rs  lib.rs  main.rs
vds-site/src/pages/: admin.rs  dashboard.rs  mod.rs  player.rs  status.rs  video_list.rs
xtask/: Cargo.toml
xtask/src/: main.rs
