[workspace]
resolver = "3"
members = [
    "vds-site",
    "vds-server",
    "vds-api",
    "xtask"
]

[workspace.dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
anyhow = "1.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
diesel = { version = "2.2.0", features = ["postgres"] }
futures-util = "0.3"
gloo-net = "0.2"
googletest = "0.14"
http = "0.2"
log = "0.4"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
static-files = "0.2.1"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.18", features = ["serde"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
xshell = "0.2.7"
yew = { version="0.21", features=["csr"] }
yew-router = "0.18"
