[workspace]
resolver = "3"
members = [
    "vds-site",
    "vds-server",
    "vds-api",
    "xtask"
]

[workspace.dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3.1"
gloo-net = "0.2"
googletest = "0.14"
http = "0.2"
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
log = "0.4"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
static-files = "0.2.1"
thiserror = "2.0.17"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["serde"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
xshell = "0.2.7"
yew = { version="0.21", features=["csr"] }
yew-router = "0.18"
tempfile = "3.24"
