[package]
name = "leap-server"
version = "0.1.0"
edition = "2024"
description = "Low-bandwidth Educational Access Platform main application"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>", "Johannes Frohnhofen <johannes@frohnhofen.com>", "Sivaranjini Chithambaram <sichitha@microsoft.com>"]
homepage = "https://github.com/t4eq/leap"
repository = "https://github.com/t4eq/leap"

[features]
default = ["git2"]
git2 = ["built/git2"]

[dependencies]
actix-web-static-files.workspace = true
actix-web.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
http.workspace = true
humantime-serde.workspace = true
leap-api.path = "../leap-api"
libsqlite3-sys.workspace = true
regex.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
static-files.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-actix-web.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
googletest.workspace = true
tempfile.workspace = true

[build-dependencies]
built.workspace = true
static-files.workspace = true
