[package]
name = "vds-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web-static-files.workspace = true
actix-web.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
diesel.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
static-files.workspace = true
tokio.workspace = true
uuid.workspace = true
vds-api.path = "../vds-api"

[dev-dependencies]
googletest.workspace = true

[build-dependencies]
static-files.workspace = true
