[package]
name = "vds-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web-static-files.workspace = true
actix-web.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
http.workspace = true
humantime-serde.workspace = true
libsqlite3-sys.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
static-files.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
uuid.workspace = true
vds-api.path = "../vds-api"

[dev-dependencies]
googletest.workspace = true
tempfile.workspace = true

[build-dependencies]
static-files.workspace = true
