[package]
name = "vds-site"
version = "0.1.0"
edition = "2024"
description = "Video delivery system frontend site"
license = "MIT OR Apache-2.0"

[dependencies]
gloo-net.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
vds-api.path = "../vds-api"
wasm-bindgen-futures.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true
yew-router.workspace = true
yew.workspace = true
